# QtForge

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeUserPresets.json.example  CODING_GUIDELINES.md  LICENSE  README.md  local_config.cmake  vcpkg.json
cmake/: FindMyQt.cmake
examples/log_widget_demo/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
include/: EyAbstractWidget.h  EyLogger.hpp  MainWindow.h  XlcAbstractWidget.h  XlcLogger.hpp
lib/XlcLogWidget/: CMakeLists.txt  README.md
lib/XlcLogWidget/include/: XlcLogWidget.h
lib/XlcLogWidget/src/: XlcLogWidget.cpp
lib/XlcLogger/: CMakeLists.txt  README.md
lib/XlcLogger/include/: XlcLogger.hpp
libs/XlcLogWidget/: CMakeLists.txt  README.md
libs/XlcLogWidget/src/: XlcLogWidget.cpp
libs/XlcLogger/: CMakeLists.txt  README.md
libs/XlcLogger/include/: XlcLogger.hpp
libs/XlcLogger/src/: XlcLogger.cpp
src/: EyAbstractWidget.cpp  MainWindow.cpp  XlcAbstractWidget.cpp  main.cpp
